test/libhyperion/syntaxTests/denominations/two_denominations_same_literal.hyp
contract C {
	uint constant y = 8 gplanck quanta;
}
// ----
// ParserError 2314: (42-46): Expected ';' but got 'quanta'
